--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,7 +14,7 @@
   <body>
 <!--barra de navegação-->
              <nav class="d-flex navbar-expand-lg navbar-light bg-light p-3 mb-2 bg-secondary text-white">
-                  <a class="nav-bar nav-link" href=""><img class="logo-img" src="../../assets/logo.svg" alt="Logo clicável ilustrativa de um megafone do ResolvaSuaVoz"></a>
+                  <a class="" href=""><img class="logo-img" src="../../assets/logo.svg" alt="Logo clicável ilustrativa de um megafone do ResolvaSuaVoz"></a>
                     
                  
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
