--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -32,21 +32,21 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="../../assets/fundopreto.avif" alt="Primeiro Slide">
+                    <img class="d-block w-100" src="../../assets/servico-social.jpg" alt="Primeiro Slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
                       </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="../../assets/fundopreto.avif" alt="Segundo Slide">
+                    <img class="d-block w-100" src="../../assets/servico-social2.jpg" alt="Segundo Slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
                       </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="../../assets/fundopreto.avif" alt="Terceiro Slide">
+                    <img class="d-block w-100" src="../../assets/servico-social3.jpg" alt="Terceiro Slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
