--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 
           <li><a class="efeito" href="#">SOBRE</a></li>
 
-          <li><a class="efeito" href="./tabela.html">SOLICITAÇÕES</a></li>
+          <li><a class="efeito" href="./solicitacoes.html">SOLICITAÇÕES</a></li>
         </ul>
       </nav>
     </header>
