--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,58 +1,68 @@
 <!doctype html>
 <html lang="pt-br">
   <head>
-    <title>ResolvasuaVoz</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    <link rel="shortcut icon" href="../../assets/favicon.png" type="image/x-png">
+    <!--favicon do site-->
+    <link rel="shortcut icon" type="image/png" href="../../assets/favi.png">
+    <!--fim do favicon do site-->
+    <!--estilizção global d site-->
     <link rel="stylesheet" href="../../styles/global.css">
+    <!--bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../styles/estilo.css">
+    <!--estilização/ajustes finos do site-->
+    <link rel="stylesheet" href="../../styles/style.css">
+    <!--titulo do site-->
+    <title>ResolvasuaVoz</title>
   </head>
   <body>
-    <!--imagem logo-->
-<!--barra de navegação-->
-            <nav class="navbar">
+        <!--barra de navegação-->
+          <nav class="navbar">
               <a href=""><img class="img1" src="../../assets/logo.svg" alt="Logo clicavel ilustrativa de um megafone do ResolvaSuaVoz"></a>
               <ul class="navbar-list">
-                <li><a class="efeito" href="#">INICIO</a></li>
+                <li><a class="efeito" href="index.html">INICIO</a></li>
+
+                <li><a class="efeito" href="#">SOLICITAÇÃO</a></li>
 
                 <li><a class="efeito" href="#">SOBRE</a></li>
-
-                <li><a class="efeito" href="#">SOLICITAÇÕES</a></li>
-            </nav>
-<!--carrossel de imagens-->         
+              </ul>
+          </nav>
+        <!--Fim da barra de navegação-->
+<!--carrossel de imagens--> 
               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
+                <!--imagen do carrosel-->   
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="../../assets/fundopreto.avif" alt="Primeiro Slide">
+                    <img class="d-block w-100" src="../../assets/teste.jpg" alt="Primeiro Slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
                       </div>
                   </div>
+                  <!--imagen do carrosel-->    
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="../../assets/fundopreto.avif" alt="Segundo Slide">
+                    <img class="d-block w-100" src="../../assets/teste2.jpg" alt="Segundo Slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
                       </div>
                   </div>
+                  <!--imagen do carrosel-->   
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="../../assets/fundopreto.avif" alt="Terceiro Slide">
+                    <img class="d-block w-100" src="../../assets/teste3.jpg" alt="Terceiro Slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
                       </div>
                   </div>
                 </div>
+                <!--botoes para passa pra proxima imagem-->
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Anterior</span>
@@ -62,38 +72,42 @@
                   <span class="sr-only">Próximo</span>
                 </a>
               </div>
+<!--fim do carrossel de imagens-->    
 <!--card de informaçoes-->
+<main>
     <div class="container"> 
       <div class="row d-flex justify-content-around">
+        <!--Primerio card de informações-->
         <div class="card" style="width: 17rem;">
           <div class="card-body">
-            <h5 class="card-title">Quem somos nos?</h5>
+            <h5 class="card-title">Pagina inicial</h5>
             <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-            <a href="#" class="card-link">Outro link</a>
           </div>
         </div>
+        <!--Segundo card de informações-->
         <div class="card" style="width: 17rem;">
           <div class="card-body">
-            <h5 class="card-title">Proposito do projeto</h5>
+            <h5 class="card-title">Solicitação</h5>
             <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-            <a href="#" class="card-link">Outro link</a>
           </div>
         </div>
+        <!--Terceiro card de informações-->
         <div class="card" style="width: 17rem;">
           <div class="card-body">
-            <h5 class="card-title">Sobre o projeto</h5>
+            <h5 class="card-title">Sobre</h5>
             <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-            <a href="#" class="card-link">Outro link</a>
           </div>
         </div>
       </div>
     </div>
+</main>
+<!--fim do card de informaçoes-->
 <!--roda pe com redes sociais-->
    <footer>
     <div class="conteiner-footer">
       <a href="#"><i class="fa-brands fa-square-instagram" style="color: #ffffff; font-size: 3.4em" alt="Instagram"></i></a>
       <a href="#"><i class="fa-brands fa-square-facebook" style="color: #ffffff; font-size: 3.4em" alt="Facebook"></i></a>
-      <a href="#"<i class="fa-brands fa-square-youtube" style="color: #ffffff; font-size:  3.4em;" alt="Youtube"></i></a>
+      <a href="#"><i class="fa-brands fa-square-youtube" style="color: #ffffff; font-size:  3.4em;" alt="Youtube"></i></a>
     </div>
      <p style="color: white;">&copy; Todos os diretios resevados Lions club International 2023</p>
    </footer>
