--- a/src/index.html
+++ b/src/index.html
@@ -1,226 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <title>ResolvasuaVoz</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-
-    <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-svg" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./styles/estilo.css" />
-  </head>
-  <body>
-    <!--imagem logo-->
-    <!--barra de navegação-->
-    <header>
-      <nav class="nav-bar">
-        <div>
-          <a href=""><img class="logo" src="./assets/logo.svg" /></a>
-          <a href=""
-            ><img class="logo-mobile" src="./assets/logo.svg"
-          /></a>
-        </div>
-        <div class="nav-list">
-          <ul>
-            <li class="nav-item">
-              <a href="./index.html" class="nav-link">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a href="./solicitacoes.html" class="nav-link">Solicitações</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Sobre</a>
-            </li>
-          </ul>
-        </div>
-        <div class="mobile-menu-icon">
-          <button onclick="menuShow()">
-            <img class="icon" src="./assets/menu_white_36dp.svg" />
-          </button>
-        </div>
-      </nav>
-      <div class="mobile-menu">
-        <ul>
-          <li class="nav-item">
-            <a href="./index.html" class="nav-link">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a href="./solicitacoes.html" class="nav-link">Solicitações</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Sobre</a>
-          </li>
-        </ul>
-      </div>
-    </header>
-    <!--carrossel de imagens-->
-    <div
-      id="carouselExampleIndicators"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <ol class="carousel-indicators">
-        <li
-          data-target="#carouselExampleIndicators"
-          data-slide-to="0"
-          class="active"
-        ></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            class="d-block w-100"
-            src="./assets/servico-social.jpg"
-            alt="Primeiro Slide"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5></h5>
-            <p></p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="./assets/servico-social2.jpg"
-            alt="Segundo Slide"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5></h5>
-            <p></p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="./assets/servico-social3.jpg"
-            alt="Terceiro Slide"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5></h5>
-            <p></p>
-          </div>
-        </div>
-      </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Anterior</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Próximo</span>
-      </a>
-    </div>
-    <!--card de informaçoes-->
-    <div class="container">
-      <div class="row d-flex justify-content-around">
-        <div class="card" style="width: 17rem">
-          <div class="card-body">
-            <a href="#" class="card-link"><h5 class="card-title">Pagina inical</h5></a>
-            <p class="card-text">
-              Aqui voce encontrara uma breve informação sobre a navegação do site são elas Incio, 
-              solicitações e sobre.
-            </p>
-          </div>
-        </div>
-        <div class="card" style="width: 17rem">
-          <div class="card-body">
-            <a href="#" class="card-link"><h5 class="card-title">Solicitações</h5></a>
-            <p class="card-text">
-                Voce pode abri uma reclamação sobre abastecimento de água, esgotamento sanitário, limpeza urbana, drenagem urbana, manejos de resíduos sólidos e de águas pluviais
-            </p>
-          </div>
-        </div>
-        <div class="card" style="width: 17rem">
-          <div class="card-body">
-            <a href="#" class="card-link"><h5 class="card-title">Sobre</h5></a>
-            <p class="card-text">
-              
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!--roda pe com redes sociais-->
-    <footer>
-      <div class="conteiner-footer">
-        <a href="#"
-          ><i
-            class="fa-brands fa-square-instagram"
-            style="color: #ffffff; font-size: 3.4em"
-            alt="Instagram"
-          ></i
-        ></a>
-        <a href="#"
-          ><i
-            class="fa-brands fa-square-facebook"
-            style="color: #ffffff; font-size: 3.4em"
-            alt="Facebook"
-          ></i
-        ></a>
-        <a href="#"
-          ><i
-            class="fa-brands fa-square-youtube"
-            style="color: #ffffff; font-size: 3.4em"
-            alt="Youtube"
-          ></i
-        ></a>
-      </div>
-      <p style="color: white">
-        &copy; Todos os diretios resevados Lions club International 2023
-      </p>
-    </footer>
-    <script>
-      function menuShow() {
-        let menuMobile = document.querySelector(".mobile-menu");
-        if (menuMobile.classList.contains("open")) {
-          menuMobile.classList.remove("open");
-          document.querySelector(".icon").src = "./assets/menu_white_36dp.svg";
-        } else {
-          menuMobile.classList.add("open");
-          document.querySelector(".icon").src = "./assets/close_white_36dp.svg";
-        }
-      }
-    </script>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/bba878b8aa.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Botões</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+</head>
+<body>
+    <button>
+    <span class="material-icons">
+        home
+        </span>
+    </button>
+        <button>
+        <span class="material-icons">
+            reorder
+            </span>
+        </button>
+</body>
 </html>
