--- a/src/solicitacoes.html
+++ b/src/solicitacoes.html
@@ -5,65 +5,171 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solicitações</title>
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-svg" />
-    <link rel="stylesheet" href="./global.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/estilo.css" />
     <link rel="stylesheet" href="./styles/solicitacoes.css" />
+    <link rel="stylesheet" href="./styles/modal.css" />
   </head>
   <body>
     <header>
-      <nav class="navbar">
-        <a href=""
-          ><img
-            class="img1"
-            src="./assets/logo.svg"
-            alt="Logo clicavel ilustrativa de um megafone do ResolvaSuaVoz"
-        /></a>
-        <ul class="navbar-list">
-          <li><a class="efeito" href="./index.html">INICIO</a></li>
-
-          <li><a class="efeito" href="#">SOBRE</a></li>
-
-          <li><a class="efeito" href="./tabela.html">SOLICITAÇÕES</a></li>
-        </ul>
+      <nav class="nav-bar">
+        <div>
+          <a href=""><img class="logo" src="./assets/logo.svg" /></a>
+          <a href=""><img class="logo-mobile" src="./assets/logo.svg" /></a>
+        </div>
+        <div class="nav-list">
+          <ul>
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a href="./solicitacoes.html" class="nav-link">Solicitações</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Sobre</a>
+            </li>
+          </ul>
+        </div>
+        <div class="mobile-menu-icon">
+          <button onclick="menuShow()">
+            <img class="icon" src="./assets/menu_white_36dp.svg" />
+          </button>
+        </div>
       </nav>
+      <div class="mobile-menu">
+        <ul>
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a href="./solicitacoes.html" class="nav-link">Solicitações</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Sobre</a>
+          </li>
+        </ul>
+      </div>
     </header>
-    <table id="tabela">
-      <!--Tabela de Solicitações-->
-      <tr>
-        <th>Nome</th>
-        <th>Email</th>
-        <th>Assunto</th>
-        <th>Mensagem de Reclamação</th>
-        <th>Foto da Reclamação</th>
-      </tr>
-      <tr>
-        <td>Cleber Almeida de Jesus</td>
-        <td>cleberalmeida@email.com</td>
-        <td>Buraco na Rua</td>
-        <td>A rua ta tda emburacada e nao da pra passar de carro</td>
-        <td>foto.jpg</td>
-      </tr>
-      <tr>
-        <td>Cleber Almeida de Jesus</td>
-        <td>cleberalmeida@email.com</td>
-        <td>Buraco na Rua</td>
-        <td>A rua ta tda emburacada e nao da pra passar de carro</td>
-        <td>foto.jpg</td>
-      </tr>
-      <tr>
-        <td>Cleber Almeida de Jesus</td>
-        <td>cleberalmeida@email.com</td>
-        <td>Buraco na Rua</td>
-        <td>A rua ta tda emburacada e nao da pra passar de carro</td>
-        <td>foto.jpg</td>
-      </tr>
-    </table>
+    <main class="container mh-100vh">
+      <section class="content-container">
+        <div class="button-container">
+          <img
+            src="./assets/bullhorn-solid.svg"
+            alt="Icone de auto falante para cadastrar solicitação."
+            id="megafone-icone"
+            data-toggle="modal"
+            data-target="#modalSolicitacoes"
+          />
+          <label
+            for="cadastrar"
+            data-toggle="modal"
+            data-target="#modalSolicitacoes"
+            >Fazer solicitação</label
+          >
+        </div>
+
+        <!-- Modal -->
+        <div
+          class="modal fade"
+          id="modalSolicitacoes"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="TituloModalCentralizado"
+          aria-hidden="true"
+        >
+          <div
+            class="modal-dialog modal-dialog-centered modal-lg"
+            role="document"
+          >
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="TituloModalCentralizado">
+                  Formulário de solicitação
+                </h5>
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Fechar"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">...</div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  Cancelar
+                </button>
+                <button type="button" class="btn btn-primary">Enviar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <table id="tabela" class="mw-100">
+          <!--Tabela de Solicitações-->
+          <tr>
+            <th>Nome</th>
+            <th>Email</th>
+            <th>Assunto</th>
+            <th>Mensagem de Reclamação</th>
+            <th>Foto da Reclamação</th>
+          </tr>
+          <tr>
+            <td>Cleber Almeida de Jesus</td>
+            <td>cleberalmeida@email.com</td>
+            <td>Buraco na Rua</td>
+            <td>A rua ta tda emburacada e nao da pra passar de carro</td>
+            <td>foto.jpg</td>
+          </tr>
+          <tr>
+            <td>Cleber Almeida de Jesus</td>
+            <td>cleberalmeida@email.com</td>
+            <td>Buraco na Rua</td>
+            <td>A rua ta tda emburacada e nao da pra passar de carro</td>
+            <td>foto.jpg</td>
+          </tr>
+          <tr>
+            <td>Cleber Almeida de Jesus</td>
+            <td>cleberalmeida@email.com</td>
+            <td>Buraco na Rua</td>
+            <td>A rua ta tda emburacada e nao da pra passar de carro</td>
+            <td>foto.jpg</td>
+          </tr>
+        </table>
+      </section>
+    </main>
+
+    <script src="./js/requisicoes.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/bba878b8aa.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
