Reposicionamento e correção da tabela

--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,7 @@
       <nav class="nav-bar">
         <div>
           <a href=""><img class="logo" src="./assets/logo.svg" /></a>
-          <a href=""
-            ><img class="logo-mobile" src="./assets/logo.svg"
-          /></a>
+          <a href=""><img class="logo-mobile" src="./assets/logo.svg" /></a>
         </div>
         <div class="nav-list">
           <ul>
@@ -137,27 +135,31 @@
       <div class="row d-flex justify-content-around">
         <div class="card" style="width: 17rem">
           <div class="card-body">
-            <a href="#" class="card-link"><h5 class="card-title">Pagina inical</h5></a>
+            <a href="#" class="card-link"
+              ><h5 class="card-title">Pagina inical</h5></a
+            >
             <p class="card-text">
-              Aqui voce encontrara uma breve informação sobre a navegação do site são elas Incio, 
-              solicitações e sobre.
+              Aqui voce encontrara uma breve informação sobre a navegação do
+              site são elas Incio, solicitações e sobre.
             </p>
           </div>
         </div>
         <div class="card" style="width: 17rem">
           <div class="card-body">
-            <a href="#" class="card-link"><h5 class="card-title">Solicitações</h5></a>
+            <a href="#" class="card-link"
+              ><h5 class="card-title">Solicitações</h5></a
+            >
             <p class="card-text">
-                Voce pode abri uma reclamação sobre abastecimento de água, esgotamento sanitário, limpeza urbana, drenagem urbana, manejos de resíduos sólidos e de águas pluviais
+              Voce pode abri uma reclamação sobre abastecimento de água,
+              esgotamento sanitário, limpeza urbana, drenagem urbana, manejos de
+              resíduos sólidos e de águas pluviais
             </p>
           </div>
         </div>
         <div class="card" style="width: 17rem">
           <div class="card-body">
             <a href="#" class="card-link"><h5 class="card-title">Sobre</h5></a>
-            <p class="card-text">
-              
-            </p>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
