--- a/src/solicitacoes.html
+++ b/src/solicitacoes.html
@@ -28,7 +28,7 @@
         <ul class="navbar-list">
           <li><a class="efeito" href="./index.html">INICIO</a></li>
 
-          <li><a class="efeito" href="#">SOBRE</a></li>
+          <li><a class="efeito" href="./sobre.html">SOBRE</a></li>
 
           <li><a class="efeito" href="./tabela.html">SOLICITAÇÕES</a></li>
         </ul>
