--- a/src/solicitacoes.html
+++ b/src/solicitacoes.html
@@ -37,7 +37,7 @@
               <a href="./solicitacoes.html" class="nav-link">Solicitações</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Sobre</a>
+              <a href="./sobre.html" class="nav-link">Sobre</a>
             </li>
           </ul>
         </div>
@@ -162,20 +162,46 @@
             >Fazer solicitação</label
           >
         </div>
-
-        <table id="tabela" class="mw-100">
-          <!--Tabela de Solicitações-->
-          <thead>
-            <tr>
-              <th>Nome</th>
-              <th>Email</th>
-              <th>Assunto</th>
-              <th>Mensagem de Reclamação</th>
-              <th>Foto da Reclamação</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
+        <div class="table-responsive">
+          <table class="table table-striped" id="tabela">
+            <thead>
+              <tr>
+                <th scope="col">Nome</th>
+                <th scope="col">Email</th>
+                <th scope="col">Assunto</th>
+                <th scope="col">Mensagem</th>
+                <th scope="col">URLimagem</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+        <div class="d-flex flex-wrap mw-100">
+          <div class="d-flex">
+            <img
+              src="./img/estatistica-atendidas.png"
+              class="w-50 img-fluid img-thumbnail"
+              alt=""
+            />
+            <img
+              src="./img/estatistica-zonas.png"
+              class="w-50 img-fluid img-thumbnail"
+              alt=""
+            />
+          </div>
+          <div class="d-flex">
+            <img
+              src="./img/estatistica-solicitacoes.png"
+              class="w-50 img-fluid img-thumbnail"
+              alt=""
+            />
+            <img
+              src="./img/estatistica-total-zonas.png"
+              class="w-50 img-fluid img-thumbnail"
+              alt=""
+            />
+          </div>
+        </div>
       </section>
     </main>
     <footer>
