Correção de footer

--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,9 @@
             alt="Logo clicavel ilustrativa de um megafone do ResolvaSuaVoz"
         /></a>
         <ul class="navbar-list">
-          <li><a class="efeito" href="/index.html">INICIO</a></li>
+          <li><a class="efeito" href="./index.html">INICIO</a></li>
 
-          <li><a class="efeito" href="/sobre.html">SOBRE</a></li>
+          <li><a class="efeito" href="./sobre.html">SOBRE</a></li>
 
           <li><a class="efeito" href="./solicitacoes.html">SOLICITAÇÕES</a></li>
         </ul>
