--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
               <a href="./solicitacoes.html" class="nav-link">Solicitações</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Sobre</a>
+              <a href="./sobre.html" class="nav-link">Sobre</a>
             </li>
           </ul>
         </div>
@@ -59,7 +59,7 @@
             <a href="./solicitacoes.html" class="nav-link">Solicitações</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link">Sobre</a>
+            <a href="./sobre.html" class="nav-link">Sobre</a>
           </li>
         </ul>
       </div>
