--- a/src/sobre.html
+++ b/src/sobre.html
@@ -39,7 +39,7 @@
               <a href="./solicitacoes.html" class="nav-link">Solicitações</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Sobre</a>
+              <a href="./sobre.html" class="nav-link">Sobre</a>
             </li>
           </ul>
         </div>
@@ -58,7 +58,7 @@
             <a href="./solicitacoes.html" class="nav-link">Solicitações</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link">Sobre</a>
+            <a href="./sobre.html" class="nav-link">Sobre</a>
           </li>
         </ul>
       </div>
