--- a/src/solicitacoes.html
+++ b/src/solicitacoes.html
@@ -56,7 +56,7 @@
             <a href="./solicitacoes.html" class="nav-link">Solicitações</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link">Sobre</a>
+            <a href="./sobre.html" class="nav-link">Sobre</a>
           </li>
         </ul>
       </div>
