--- a/src/sobre.html
+++ b/src/sobre.html
@@ -41,6 +41,9 @@
             <li class="nav-item">
               <a href="./sobre.html" class="nav-link">Sobre</a>
             </li>
+            <li class="nav-item">
+              <a href="./galeria.html" class="nav-link">Galeria</a>
+            </li>
           </ul>
         </div>
         <div class="mobile-menu-icon">
@@ -59,6 +62,9 @@
           </li>
           <li class="nav-item">
             <a href="./sobre.html" class="nav-link">Sobre</a>
+          </li>
+          <li class="nav-item">
+            <a href="./galeria.html" class="nav-link">Galeria</a>
           </li>
         </ul>
       </div>
