Correção de navegação

--- a/src/solicitacoes.html
+++ b/src/solicitacoes.html
@@ -40,7 +40,7 @@
               <a href="./sobre.html" class="nav-link">Sobre</a>
             </li>
             <li class="nav-item">
-              <a href="./galeria.html" class="nav-link">Sobre</a>
+              <a href="./galeria.html" class="nav-link">Galeria</a>
             </li>
           </ul>
         </div>
