--- a/src/galeria.html
+++ b/src/galeria.html
@@ -24,8 +24,8 @@
           
           
           <!--imagem logo-->
-          <a href=""><img class="logo" src="./assets/logo.svg" /></a>
-          <a href=""><img class="logo-mobile" src="./assets/logo.svg" /></a>
+          <a href="./index.html"><img class="logo" src="./assets/logo.svg" /></a>
+          <a href="./index.html"><img class="logo-mobile" src="./assets/logo.svg" /></a>
         </div>
         <div class="nav-list">
           <ul>
