--- a/src/sobre.html
+++ b/src/sobre.html
@@ -27,8 +27,8 @@
     <header>
       <nav class="nav-bar">
         <div>
-          <a href=""><img class="logo" src="./assets/logo.svg" /></a>
-          <a href=""><img class="logo-mobile" src="./assets/logo.svg" /></a>
+          <a href="./index.html"><img class="logo" src="./assets/logo.svg" /></a>
+          <a href="./index.html"><img class="logo-mobile" src="./assets/logo.svg" /></a>
         </div>
         <div class="nav-list">
           <ul>
